# warrant

./: .bumpversion.cfg  .gitignore  .travis.yml  HISTORY.md  Pipfile  README.md  azure-pipelines.yml  django-requirements.txt  manage.py  pylintrc  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tests.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
cdu/: manage.py  settings.py  urls.py  wsgi.py
cdu/demo/: apps.py  views.py
cognito/: __init__.py  tests.py
cognito/django/: __init__.py  backend.py  forms.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
cognito/tests/: tests.py
mandate/: __init__.py  aws_srp.py
mandate/utils/: __init__.py
placebo/CognitoTestCase.test_authenticate/: cognito-idp.AdminInitiateAuth_1.json
placebo/CognitoTestCase.test_authenticate_user/: cognito-idp.InitiateAuth_1.json  cognito-idp.RespondToAuthChallenge_1.json
placebo/CognitoTestCase.test_change_password/: cognito-idp.AdminInitiateAuth_1.json  cognito-idp.ChangePassword_1.json
placebo/CognitoTestCase.test_check_token/: cognito-idp.AdminInitiateAuth_1.json  cognito-idp.AdminInitiateAuth_2.json
placebo/CognitoTestCase.test_get_user/: cognito-idp.AdminGetUser_1.json
placebo/CognitoTestCase.test_logout/: cognito-idp.AdminInitiateAuth_1.json  cognito-idp.GlobalSignOut_1.json
pycognito/: __init__.py  aws_srp.py  exceptions.py
tests/: __init__.py  test_api.py  test_moduleinit.py  test_util.py  test_utils.py  tests.py
warrant/: __init__.py  aws_srp.py  exceptions.py
warrant/django/: README.md  __init__.py  urls.py  (+5 more)
(+45 files in other folders)
