[tool.poetry]
name = "warrant"
version = "0.1.0"
description = "Python library for using AWS Cognito. With support for SRP. "
authors = ["Brian Jinwright"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = ">=1.4.3"
envs = ">=0.3.0"
requests = ">=2.13.0"
pycryptodome = ">=3.9.0"
warrant-lite = ">=1.0.4"

[tool.poetry.dev-dependencies]
mock = ">=2.0.0"
nose = "^1.3.7"
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
